--- a/gulp-pattern-lab/css/components/block-banner.css
+++ b/gulp-pattern-lab/css/components/block-banner.css
@@ -23,22 +23,16 @@
   @media (min-width: 64rem) {
     .block-banner__left {
       width: 48.31081%;
-      margin-right: 3.37838%;
       float: left; } }
   @media (min-width: 64rem) {
     .block-banner__right {
-      width: 31.08108%;
-      margin-right: 3.37838%; } }
+      width: 31.08108%; } }
   @media (min-width: 64rem) {
     .block-banner__right:nth-child(2n + 2) {
-      float: right;
-      margin-right: 0; } }
+      float: right; } }
   @media screen and (max-width: 63.9375rem) {
     .block-banner__left {
       margin-bottom: 2.625rem; } }
-  @media screen and (max-width: 63.9375rem) {
-    .block-banner__right {
-      width: 100%; } }
   .block-banner__title {
     margin-bottom: 1.4375rem; }
     @media (min-width: 64rem) {
@@ -79,9 +73,7 @@
     .block-banner__links a {
       font-size: 1.0625rem; }
       .block-banner__links a:after {
-        color: #3681D7;
-        font-size: 1.5rem;
-        margin-left: 1.125rem; }
+        color: #3681D7; }
     .block-banner__links .tag {
       color: #3681D7;
       border: 0.0625rem solid #3681D7;
